# neat-base

./: CMakeLists.txt  regenerate_all.cmake
src/: main.cpp  main3.cpp  mainold.cpp  workingxor.cpp
src/core/: ActivationFunction.hpp  ActivationGene.cpp  ActivationGene.hpp  Gene.hpp  Genome.cpp  Genome.hpp  InnovationTracker.cpp  InnovationTracker.hpp  NEAT.cpp  NEAT.hpp  Population.cpp  Population.hpp  Species.hpp
src/evolution/: CrossoverOperator.cpp  CrossoverOperator.hpp  Evolution.cpp  Evolution.hpp  FitnessEvaluator.cpp  FitnessEvaluator.hpp  MutationOperator.cpp  MutationOperator.hpp  SelectionOperator.cpp  SelectionOperator.hpp  SpeciesManager.cpp  SpeciesManager.hpp
src/logger/: Logger.hpp
src/network/: Activation.hpp  Connection.cpp  Connection.hpp  Network.cpp  Network.hpp  NetworkValidator.cpp  NetworkValidator.hpp  Node.hpp
src/visualization/: InteractiveNetwork.cpp  InteractiveNetwork.hpp  NetworkRenderer.cpp  NetworkRenderer.hpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  ReactComponents.cpp  ReactComponents.hpp  StatsTracker.cpp  StatsTracker.hpp
tests/: CMakeLists.txt  README.md  main.cpp  test_common.h  test_utilities.cpp  test_utilities.h
tests/integration/PopulationIntegration/: CMakeLists.txt  CoreGenomePropagation.cpp
tests/unit/: activation_tests.cpp  connectionMutation_tests.cpp  genome_tests.cpp
tests/unit/CompatibilityDistance/: CompatibilityDistance.cpp
tests/unit/ConnectionGene/: CMakeLists.txt  ConnectionGene.cpp  generate_connection_attributes_registration.cmake  run_generation.cmake
tests/unit/ConnectionMutation/: CMakeLists.txt  ConnectionMutation.cpp
tests/unit/ConnectionReactivation/: CMakeLists.txt  ConnectionReactivation.cpp
tests/unit/Crossover/: CMakeLists.txt  Crossover.cpp
tests/unit/CycleDetection/: CycleDetection.cpp
tests/unit/DynamicDataUpdate/: DynamicDataUpdate.cpp
tests/unit/Genome/: CMakeLists.txt  Genome.cpp
tests/unit/GlobalIndexRegistry/: GlobalIndexRegistry.cpp
tests/unit/HistoryTracker/: CMakeLists.txt  HistoryTracker.cpp
tests/unit/Init/: Init.cpp
tests/unit/NodeGene/: CMakeLists.txt  NodeGene.cpp  generate_node_attributes_registration.cmake  run_generation.cmake
tests/unit/NodeMutation/: CMakeLists.txt  NodeMutation.cpp
tests/unit/PhenotypeConstruct/: CMakeLists.txt  PhenotypeConstruct.cpp
tests/unit/PhenotypeUpdateConnection/: CMakeLists.txt  PhenotypeUpdateConnection.cpp
tests/unit/PhenotypeUpdateNode/: CMakeLists.txt  PhenotypeUpdateNode.cpp
tests/unit/PhenotypeUpdateWeight/: CMakeLists.txt  PhenotypeUpdateWeight.cpp
tests/unit/PopulationContainer/: PopulationContainer.cpp
tests/unit/ResolveParentIndices/: CMakeLists.txt  ResolveParentIndices.cpp
tests/unit/SingleSimpleFitnessStrategy/: SingleSimpleFitnessStrategy.cpp
tests/unit/SpeciesGrouping/: SpeciesGrouping.cpp
tests/unit/Visualization/: Visualization.cpp
tests/unit/WeightMutation/: CMakeLists.txt  WeightMutation.cpp
version3/: EvolutionPrototype.hpp  TODOs.md  discover_all_types.cmake  generate_forward_declarations_from_types.cmake  generate_operator_forward_declarations.cmake  generate_operator_friend_declarations.cmake  generate_template_friend_declarations.cmake  generate_universal_operator_declarations.cmake  main.cpp
version3/analysis/: CompatibilityDistance.cpp  FitnessResult.hpp  FitnessStrategy.hpp  GenomeAnalytics.hpp  SpeciationControlUnit.hpp  SpeciesGrouping.hpp
version3/analysis/strategies/: MultiRunCompetitiveFitnessStrategy.hpp  MultiRunSimpleFitnessStrategy.hpp  SingleCompetitiveFitnessStrategy.hpp  (+1 more)
version3/data/: ConnectionGene.cpp  ConnectionGene.hpp  Genome.cpp  Genome.hpp  GlobalIndexRegistry.cpp  GlobalIndexRegistry.hpp  HistoryTracker.cpp  HistoryTracker.hpp  NodeGene.cpp  NodeGene.hpp  Phenotype.hpp  PopulationContainer.hpp  PopulationData.hpp
version3/display/: DisplayGenome.hpp  DisplayPhenotype.cpp  DisplayPhenotype.hpp
version3/evolution/: ConnectionReactivation.hpp  Crossover.hpp  CrossoverManagement.hpp  EvolutionPrototype.hpp  MutationPlacement.hpp  PlotCrossover.hpp  RepairOperator.cpp  RepairOperator.hpp
version3/logger/: Logger.hpp
version3/operator/: CompatibilityDistance.cpp  CompatibilityDistance.hpp  ConnectionMutation.cpp  ConnectionMutation.hpp  ConnectionReactivation.cpp  ConnectionReactivation.hpp  Crossover.cpp  Crossover.hpp  CycleDetection.cpp  CycleDetection.hpp  DisplayGenome.cpp  GenomeEquals.cpp  GenomeEquals.hpp  GenomePlacement.hpp  HasActiveConnections.hpp  HasDisabledConnections.cpp  HasPossibleConnections.hpp  Init.cpp  Init.hpp  NetworkExecution.cpp  NetworkExecution.hpp  NodeMutation.cpp  NodeMutation.hpp  PhenotypeConstruct.cpp  PhenotypeUpdateConnection.cpp  PhenotypeUpdateNode.cpp  PhenotypeUpdateWeight.cpp  RepairOperator.cpp  RepairOperator.hpp  WeightMutation.cpp  WeightMutation.hpp
version3/phenotype/: NetworkExecution.hpp  PhenotypeConstruct.hpp  PhenotypeUpdateConnection.cpp  PhenotypeUpdateConnection.hpp  PhenotypeUpdateNode.hpp  PhenotypeUpdateWeight.hpp
version3/population/: Bootstrap.hpp  CreateCrossoverDynamicData.hpp  DynamicDataUpdate.cpp  DynamicDataUpdate.hpp  FilterEliminatedIndices.hpp  FitnessExtraction.hpp  GenerationPlanner.cpp  GenerationPlanner.hpp  GenerationPlannerParams.cpp  GenerationPlannerParams.hpp  GenerationPopulationData.hpp  GenerationTransition.hpp  GenomeEquilibriumElimination.hpp  GenomePlacement.hpp  GlobalIndexRegistry.cpp  GlobalIndexRegistry.hpp  OUTLINE.md  PlotCrossover.hpp  PlotElites.hpp  PopulationContainer.hpp  PopulationData.hpp  ReproductiveInstruction.hpp  ResolveParentIndices.cpp  ResolveParentIndices.hpp  ResultExtraction.hpp  SpeciesEquilibriumElimination.hpp  SpeciesGrouping.hpp  SpeciesRanking.hpp  TODO.md
version3/validation/: BestGenomePreservationValidation.hpp  CycleDetection.hpp  EliteGenomeValidation.hpp  EmptyDeltas.cpp  EmptyDeltas.hpp  HasActiveConnections.cpp  HasActiveConnections.hpp  HasDisabledConnections.hpp  HasPossibleConnections.cpp  HasPossibleConnections.hpp  SpeciesFitnessRegression.hpp
version3/visualization/: SVGGenerator.cpp  SVGGenerator.hpp
